k8s-resources/color/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: color
  name: color
spec:
  revisionHistoryLimit: 3
  replicas: 1
  selector:
    matchLabels:
      app: color
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: color
    spec:
      containers:
      - image: quay.io/tedspinks/color:0049767
        imagePullPolicy: Always
        name: color-service
        resources: {}
status: {}
