k8s-resources/color/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: color
  name: color
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: color
status:
  loadBalancer: {}
